--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "chart.js": "^2.9.3",
     "firebase": "^7.14.6",
+    "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
